# valera-hmuriy

./: .gitignore  README.md
gnubg/: logic.py  main.py  models.py  visualizer.py
gnubg_engine/: Makefile  Makefile.in  aclocal.m4  bearoffdump  config.h  config.status  configure  gnubg  libtool  makebearoff  makehyper  makeweights  start.sh
gnubg_engine/autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.2
gnubg_engine/board3d/: Makefile  Makefile.in
gnubg_engine/doc/: Makefile  Makefile.in  gnubg.info
gnubg_engine/flags/: Makefile  Makefile.in
gnubg_engine/fonts/: Makefile  Makefile.in
gnubg_engine/lib/: Makefile  Makefile.in  SFMT.lo  cache.lo  isaac.lo  libevent.la  libsimd.la  libsimd_la-inputs.lo  libsimd_la-neuralnetsse.lo  libsimd_la-output.lo  list.lo  md5.lo  neuralnet.lo
gnubg_engine/m4/: Makefile  Makefile.in
gnubg_engine/met/: Makefile  Makefile.in
gnubg_engine/non-src/: Makefile  Makefile.in
gnubg_engine/pixmaps/: Makefile  Makefile.in
gnubg_engine/po/: Makefile  Makefile.in
gnubg_engine/scripts/: Makefile  Makefile.in
gsservice/: gs_service.py  main.py  requirements.txt
hmuriy/: run_account_template.py
hmuriy_module/: CMakeLists.txt  build.bat  main.cpp
hmuriy_module/Game/: GameConfig.h
hmuriy_module/Hooks/: GameHooks.cpp  GameHooks.h
hmuriy_module/Logic/: CommandManager.cpp  CommandManager.h
hmuriy_module/Network/: Client.cpp  Client.h
hmuriy_module/Utils/: And64InlineHook.cpp  Logger.h  MemoryUtils.cpp  MemoryUtils.h  StringUtils.h
valera-app/: .gitignore  settings.gradle.kts
web/: main.py
(+42 files in other folders)
